@@ -1,7 +1,5 @@
 (function() {
 
-	var dashboardClassesProcessStore = null;
-
 	Ext.ns('CMDBuild.cache');
 	Ext.define("CMDBuild.cache.CMCache", {
 		extend: "Ext.util.Observable",
@@ -214,42 +212,7 @@
 			reloadRelferenceStore(this.mapOfReferenceStore, idClass);
 		},
 
-		getTableGroup: getTableGroup,
-
-		getClassesAndProcessesAndDahboardsStore: function() {
-			if (dashboardClassesProcessStore == null) {
-				var classesAndProcessStore = this.getClassesAndProcessesStore();
-				var me = this;
-
-				dashboardClassesProcessStore = new Ext.data.Store({
-					model: "CMTableForComboModel",
-					cmFill: function() {
-						var dashboards = readDashboardsForComboStore(me);
-						var classesAndProcesses = classesAndProcessStore.data.items;
-
-						this.removeAll();
-						this.add(dashboards);
-						this.add(classesAndProcesses);
-					},
-					sorters: [{
-						property : 'description',
-						direction : 'ASC'
-					}]
-				});
-
-				classesAndProcessStore.cmFill = Ext.Function.createSequence(classesAndProcessStore.cmFill, function() {
-					dashboardClassesProcessStore.removeAll();
-					dashboardClassesProcessStore.add(classesAndProcessStore.data.items);
-					dashboardClassesProcessStore.add(readDashboardsForComboStore(me));
-				});
-
-				this.on(this.DASHBOARD_EVENTS.add, dashboardClassesProcessStore.cmFill, dashboardClassesProcessStore);
-				this.on(this.DASHBOARD_EVENTS.remove, dashboardClassesProcessStore.cmFill, dashboardClassesProcessStore);
-				this.on(this.DASHBOARD_EVENTS.modify, dashboardClassesProcessStore.cmFill, dashboardClassesProcessStore);
-			}
-
-			return dashboardClassesProcessStore;
-		}
+		getTableGroup: getTableGroup
 	});
 
 	function readDashboardsForComboStore(me) {
